<resources>
	 <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="app_name">SousVide</string>
    <string name="warn_sdcard_miss">SD卡无法读取，请检查SD卡。</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="use_rom">使用ROM存储</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="close">关闭</string>
    <string name="update_title">开始下载更新</string>
    <string name="update_content">下载更新中...%1$d%%</string>
    <string name="err_on_network">网络无法链接，请检查网络是否链接正常。</string>
    <string name="err_network">网络延迟，请检查网络或重试。</string>
    <string name="err_system">系统错误</string>
    <string name="error_get_skin">获取皮肤出错，请检查是否已下载皮肤</string>
    <string name="err_network_ont_wifi">您的网络不是WIFI，请先链接WIFI</string>
    <string name="err_not_support">不支持的命令类型。</string>
    <string name="err_not_access">设备不在线，请检查设备网络是否正常。</string>
    <string name="err_not_auth">连接中断，请返回设备列表重新登陆。</string>
    <string name="err_auth_fail">认证失败，请进入局域网重新刷新设备。</string>
    <string name="err_default">登陆异常，请退出重新登陆。</string>
    <string name="err_not_network_pause">网络暂停</string>
    <string name="err_not_init">网络未初始化</string>
    <string name="err_no_memory">分配不到内存</string>
    <string name="err_not_exist">设备不存在</string>
    <string name="device_reset">正在初始化</string>
    <string name="wating">等待中</string>
    <string name="new_off_line">离线状态</string>
    <string name="new_off_remote">远程状态</string>
    <string name="new_off_local">本地状态</string>
    <string name="name">名称:</string>
    <string name="device_lock">锁定设备</string>
    <string name="mac">Mac:</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login_password">登录密码</string>
    <string name="remember_username">记住密码</string>
    <string name="regist_new">立即注册</string>
    <string name="login">登录</string>
    <string name="on_home_mode">在家模式进入</string>
    <string name="add_device">添加设备</string>
    <string name="logining">登录中...</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="err_serial_number">序列号错误，请重新输入</string>
    <string name="hint_frist_login_hint">首次登录请先注册</string>
    <string name="register">注册</string>
    <string name="registering">注册中...</string>
    <string name="password_hint">6-12位字母或字符组成的密码</string>
    <string name="comfim_password">确认密码</string>
    <string name="password_hint_agin">再次输入密码</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="email">邮箱</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="user_name_hint">6-12位字母或字符组成的帐号</string>
    <string name="err_username">请输入6-12位字母或字符组成的帐号</string>
    <string name="err_password">请输入6-12位字母或字符组成的密码</string>
    <string name="password_inconformity">两次密码不一致</string>
    <string name="err_phone">手机号码错误</string>
    <string name="err_email">邮箱格式错误</string>
    <string name="user_agreement">用户协议</string>
    <string name="err_user_agreement">请先同意用户协议</string>
    <string name="air">空气</string>
    <string name="device_mange">设备管理</string>
    <string name="eair">空气质量</string>
    <string name="un_open">未开启</string>
    <string name="saving">保存中...</string>
    <string name="save">保存</string>
    <string name="edit_name">修改名称</string>
    <string name="scan_qr">扫描条形码</string>
    <string name="delete_device_hint">确认要删除这个设备吗？</string>
    <string name="silence">节能</string>
    <string name="auto">智能</string>
    <string name="kill">杀菌</string>
    <string name="sensor_uv">紫外线</string>
    <string name="sensor_o1">负离子</string>
    <string name="sensor_o3">臭氧</string>
    <string name="filter_info">滤网信息</string>
    <string name="room_air">室内空气指数</string>
    <string name="click_start">点击立即运行</string>
    <string name="standby">待机</string>
    <string name="air_bad">差</string>
    <string name="air_normal">中</string>
    <string name="air_good">良</string>
    <string name="air_best">优</string>
    <string name="timer">定时</string>
    <string name="hour">小时</string>
    <string name="format_time">%1$s小时</string>
    <string name="format_wind">风量 %1$s</string>
    <string name="wind">风量</string>
    <string name="wind_1">1</string>
    <string name="wind_2">2</string>
    <string name="wind_3">3</string>
    <string name="wind_4">4</string>
    <string name="wind_5">5</string>
    <string name="wind_6">6</string>
    <string name="wind_7">7</string>
    <string name="wind_8">8</string>
    <string name="wind_9">9</string>
    <string name="mode_night">夜间模式</string>
    <string name="pm_best">优</string>
    <string name="pm_good">良</string>
    <string name="pm_mild">轻度污染</string>
    <string name="pm_mezzo">中度污染</string>
    <string name="pm_severe">重度污染</string>
    <string name="pm_severity">严重污染</string>
    <string name="config_page_hint">添加一个新设备到WIFI网络</string>
    <string name="ssid">WiFi名称:</string>
    <string name="wifi_password">WiFi密码:</string>
    <string name="show_password">显示密码</string>
    <string name="start">开始配置</string>
    <string name="configing_hint">配置有可能需要1分钟，请稍等...</string>
    <string name="config_fail">配置失败</string>
    <string name="config_success">配置成功</string>
    <string name="click_open">点击开启</string>
    <string name="click_input">手动输入</string>
    <string name="filter_case">滤网情况</string>
    <string name="delay_time">剩余时间</string>
    <string name="net">购买网站</string>
    <string name="net_value">http://shop112304399.taobao.com/</string>
    <string name="server_tel">服务电话</string>
    <string name="server_tel_value">400-0679899</string>
    <string name="hint">提示</string>
    <string name="call_phone_hint">是否拨打服务电话：4008-123456-5？</string>
    <string name="format_location_pm">%1$s空气指数</string>
    <string name="format_location_weather">%1$s %2$s~%3$s℃</string>
    <string name="get_weather">获取中...</string>
    <string name="faq">常见问题</string>
    <string name="air_err">故障错误</string>
    <string name="err_motor">电机存在故障</string>
    <string name="err_air_sensor">空气质量传感器存在故障</string>
    <string name="un_install_360_weather">未安装360天气应用，请先安装</string>
    <string name="scan_qr_hint">请将条形码放入框内</string>
    <string name="upload_device_info">激活设备</string>
    <string name="uploading">上传中...</string>
    <string name="confim_upload">确认上传</string>
    <string name="qr_info">机身编码:</string>
    <string name="input_qr_info">请手动输入或扫描</string>
    <string name="upload_device">设备名称:</string>
    <string name="good_night_sys">权友水壶</string>
    <string name="wifi_passwd">入网密码</string>
    <string name="option_title">更多功能</string>
    <string name="call_server">请联系客户服务中心:4008-123456-5</string>
    <string name="hello_world">hello world</string>
    <string name="option_text_add">添加新设备</string>
    <string name="option_text_update">检测更新</string>
    <string name="option_text_manual">用户手册</string>
    <string name="option_text_faq">常见问题</string>
    <string name="option_text_about">关于权友</string>
    <string name="default_temperature">30C</string>
    <string name="default_humidity">60%</string>
    <string name="inside_temperature">室内温度</string>
    <string name="inside_humidity">室内湿度</string>
    <string name="outside_temperature">室外温度</string>
    <string name="outside_humidity">室外湿度</string>
    <string name="air_value">8</string>
    <string name="air_state">空气指数</string>
    <string name="timer_left">设备时间: 12:30</string>
    <string name="timer_start">定时开机: 00:00</string>
    <string name="timer_stop">定时关机: 00:00</string>
    <string name="timer_start_pre">定时开机: </string>
    <string name="timer_stop_pre">定时关机: </string>
    <string name="text_wind_in">新风</string>
    <string name="text_wind_out">排风</string>
    <string name="text_wind_in_stop">新风 0</string>
    <string name="text_wind_out_stop">排风  0</string>
    <string name="text_heat">辅热</string>
    <string name="text_o1">富氧</string>
    <string name="center_name">中央新风系统</string>
    <string name="mode_manual">连续模式</string>
    <string name="mode_auto">智能模式</string>
    <string name="mode_winter">冬天模式</string>
    <string name="mode_fix">恒湿模式</string>
    <string name="mode_circle">循环模式</string>
    <string name="t1_mode_manual">手动模式</string>
    <string name="humi_set_default">恒湿:30%</string>
    <string name="humi_valid">恒湿:无效</string>
    <string name="humi_set">恒湿:</string>
    <string name="timer_title">定时开关机</string>
    <string name="label_start">开</string>
    <string name="label_end">关</string>
    <string name="search_device">搜索设备</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="percent">%</string>
    <string name="degree_c">℃</string>
    <string name="device_time">设备时间: </string>
    <string name="network_bad">网络不给力哦!</string>
    <string name="network_recovery">网络连接已恢复!</string>
    <string name="network_lost">网络连接超时!</string>
    <string name="goodneight_device">权友水壶</string>
    <string name="device_offline">离线</string>
    <string name="device_online">在线</string>
    <string name="this_device_online">该设备未在线!</string>
    <string name="no_device">未添加任何设备</string>
    <string name="no_device_found">未搜索到设备</string>
    <string name="check_network">网络连接失败,请检测网络!</string>
    <string name="auto_mode_no_wind_set">智能模式下风量由系统自动控制!</string>
    <string name="fix_mode_no_wind_set">恒湿模式下新风排风由系统自动控制!</string>
    <string name="circle_mode_no_wind_set">循环模式下新风排风由系统自动控制!</string>
    <string name="add_to_list">添加到列表</string>
    <string name="wifi">Wifi</string>
    <string name="text_center_temp">温度:25℃</string>
    <string name="text_center_humi">湿度:60%</string>
    <string name="text_temp_pre">温度:</string>
    <string name="text_humi_pre">湿度:</string>
    <string name="text_center_air_conditon">空调温度:25℃</string>
    <string name="level_low">低</string>
    <string name="level_mid">中</string>
    <string name="level_high">高</string>
    <string name="center_state_title_fresh">清 新</string>
    <string name="center_state_title_bad">严 重</string>
    <string name="center_state_title_good">良 好</string>
    <string name="center_state_desc_default">350 ppm</string>
    <string name="center_condition_speed">空调风量:3</string>
    <string name="center_condition_temp">空调温度:25℃</string>
    <string name="conditioner">空调</string>
    <string name="no_limit">无级</string>
    <string name="mode_high_speed">高速模式</string>
    <string name="mode_mid_speed">中速模式</string>
    <string name="mode_low_speed">低速模式</string>
    <string name="mode_nolimit_speed">无极模式</string>
    <string name="option_text_edit">编辑备注</string>
    <string name="option_text_del">删除</string>
    <string name="option_text_clear_all">删除所有设备</string>
    <string name="timerset_open">开启时间</string>
    <string name="timerset_close">关闭时间</string>
    <string name="timerset_set_cancel">取消</string>
    <string name="timerset_set_title">开启时间</string>
    <string name="timerset_set_ok">确定</string>
    <string name="timer_time">09:53</string>
    <string name="timer_repeat_date_text">重复:</string>
    <string name="timer_repeat_date_onetime">一次 </string>
    <string name="timer_repeat_date_everyday">每天</string>
    <string name="timer_repeat_date_everyweek">每周 </string>
    <string name="timer_repeat_date_7">日</string>
    <string name="timer_repeat_date_1">一</string>
    <string name="timer_repeat_date_2">二</string>
    <string name="timer_repeat_date_3">三</string>
    <string name="timer_repeat_date_4">四</string>
    <string name="timer_repeat_date_5">五</string>
    <string name="timer_repeat_date_6">六</string>
    <string name="text_kettle_load_text1">茶更加香</string>
    <string name="text_kettle_load_text2">■</string>
    <string name="text_kettle_load_text3">味更加浓</string>
    <string name="text_kettle_load_text4">中山·权友电器</string>
</resources>