<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff36373B" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="40dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kettle_load_text1"
            android:textColor="@color/color_my_white"
            android:textSize="30.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:text="@string/text_kettle_load_text2"
            android:textColor="@color/color_red"
            android:textSize="25.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kettle_load_text3"
            android:textColor="@color/color_my_white"
            android:textSize="30.0sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:paddingBottom="16dip"
        android:text="@string/text_kettle_load_text4"
        android:textColor="@color/color_my_white"
        android:textSize="16.0sp" />

</FrameLayout>