<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    android:gravity="bottom" 
    android:orientation="vertical" 
    android:background="#ffe5e5e5" 
    android:paddingTop="10.0dip" 
    android:paddingLeft="10dip" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  
    <CheckedTextView 
    android:textSize="18.0sp" 
    android:textColor="@color/color_main_bg" 
    android:gravity="center_vertical" 
    android:text="@string/t1_mode_manual"
    android:paddingLeft="5.0dip" 
    android:paddingTop="10.0dip" 
    android:paddingRight="5.0dip" 
    android:paddingBottom="10.0dip" 
    android:layout_width="200dp" 
    android:layout_height="wrap_content" 
    android:id="@+id/check_text_mode_manual_t1"
    android:checkMark="@drawable/selector_single_choice"/>
    
    <CheckedTextView 
    android:textSize="18.0sp" 
    android:textColor="@color/color_main_bg" 
    android:gravity="center_vertical" 
    android:text="@string/mode_circle"
    android:paddingLeft="5.0dip" 
    android:paddingTop="10.0dip" 
    android:paddingRight="5.0dip" 
    android:paddingBottom="10.0dip" 
    android:layout_width="200dp"
    android:layout_height="wrap_content" 
    android:id="@+id/check_text_mode_circle_t1"
    android:checkMark="@drawable/selector_single_choice"/>
    
    
    <CheckedTextView 
    android:textSize="18.0sp" 
    android:textColor="@color/color_main_bg" 
    android:text="@string/mode_auto"
    android:gravity="center_vertical" 
    android:paddingLeft="5.0dip" 
    android:paddingTop="10.0dip" 
    android:paddingRight="5.0dip" 
    android:paddingBottom="10.0dip" 
    android:layout_width="200dp" 
    android:layout_height="wrap_content" 
    android:id="@+id/check_text_mode_auto_t1"
    android:checkMark="@drawable/selector_single_choice"/>
    
	
</LinearLayout>